<resources>
    <string name="str_add_friend">加好友</string>
    <string name="str_add_subscribe">订阅</string>
    <string name="spacecover_from_camera">拍照</string>
    <string name="spacecover_from_pic">从相册选择</string>
	<string name="replace">覆盖</string>
	<string name="save_as">另存为</string>
	<string name="about_us">关于微时光</string>
	<string name="app_name_info">微时光 android版</string>
	<string name="app_version">版本      1.0.1</string>
	<string name="app_info_6">微时光用户交流qq群：</string>
	<string name="app_info_7">105486020</string>
	<string name="app_info_8">北京中传视讯科技有限公司</string>
	<string name="app_info_9">www.cmmobi.com</string>
    <string name="single_complete">完成</string>
    <string name="camera">拍照</string>
    <string name="local_pic">从相册中选择</string>
    <string name="sex_man">男</string>
    <string name="sex_woman">女</string>
    <string name="secret">保密</string>
    <string name="signature">个性签名</string>
     <string name="input_signature">个性签名（不超过30个中文字符）</string>
    <string name="signature_num">30</string>
    <string name="gesture_pwd">保险箱</string>
    <string name="reset_geture_pwd"><u>重置手势密码</u></string>
    <string name="cancel_safe_mode">注销保险箱</string>
 	<string name="cancel_safe_explain">如注销保险箱，保险箱里的内容将全部显示在空间页</string>
    <string name="cancel">取消</string>
    <string name="diary_comment_reply">回复</string>
    <string name="diary_comment_delete">删除</string>
    <string name="diary_comment_cancel">取消</string>
    <string name="diary_delete">删除</string>
    <string name="diary_update">上传</string>
    <string name="diary_edit">编辑</string>
    <string name="diary_cancel">取消</string>
    <string name="diary_edit_tag">标签编辑</string>
    <string name="diary_edit_position">位置编辑</string>
    <string name="diary_edit_text">文本编辑</string>
</resources>