<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom|center_horizontal"
    android:padding="10dp"
    android:orientation="vertical">
    
    <Button
        android:id="@+id/btn_edit_text"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="1dp"
    	android:gravity="center"
    	android:text="@string/diary_edit_text"
    	android:textSize="22sp"
    	android:textColor="@color/blue"
    	android:background="@drawable/btn_menu_top"/>
       
    <Button
        android:id="@+id/btn_edit_tag"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="1dp"
    	android:gravity="center"
    	android:text="@string/diary_edit_tag"
    	android:textSize="22sp"
    	android:textColor="@color/blue"
    	android:background="@drawable/btn_menu_middle"/>
    
    <Button
        android:id="@+id/btn_edit_position"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="1dp"
    	android:gravity="center"
    	android:text="@string/diary_edit_position"
    	android:textSize="22sp"
    	android:textColor="@color/blue"
    	android:background="@drawable/btn_menu_bottom"/>

</LinearLayout>