<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
	android:orientation="vertical"
    android:gravity="center_horizontal"
	android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:background="@null">

    <Button
        android:id="@+id/save_as"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_menu_top"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:text="@string/save_as" />
    <ImageView
		android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/liebiao_line"/>

    <Button
        android:id="@+id/replace"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:background="@drawable/btn_menu_bottom"
        android:textColor="@color/blue"
		android:textSize="18sp"
        android:text="@string/replace" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_menu_one"
        android:textColor="@color/blue"
    	android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:text="@string/cancel" />

</LinearLayout>