<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white" >

        <RelativeLayout
            android:id="@+id/tou_rl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/tou" >

            <ImageButton
                android:id="@+id/ib_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/btn_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/gesture_pwd"
                android:textColor="@color/black"
                android:textSize="@dimen/setting_title" />
        </RelativeLayout>
       
    <TextView
        android:id="@+id/tv_explain"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/tou_rl"
        android:layout_marginLeft="@dimen/setting_padding"
        android:layout_marginRight="@dimen/setting_padding"
        android:gravity="center"
        android:text="@string/cancel_safe_explain"
        android:textColor="@color/gray"
        android:textSize="@dimen/setting_max" />
    
    <Button
        android:id="@+id/btn_cancelsafemode"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/setting_item_height"
        android:layout_below="@+id/tv_explain"
        android:background="@drawable/btn_activity_setting_bg"
        android:text="@string/cancel_safe_mode"
        android:textColor="@color/dark_red"
        android:textSize="@dimen/setting_max" />

        <TextView 
        android:id="@+id/tv_reset"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/setting_item_height"
        android:textSize="@dimen/setting_max"
        android:textColor="@color/gray"
        android:text="@string/reset_geture_pwd"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>