<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/popwindow_padding"
    android:paddingLeft="@dimen/popwindow_padding"
    android:paddingRight="@dimen/popwindow_padding"
    android:background="@color/dark_gray_translucence"
    >
    <Button 
       android:id="@+id/btn_cancel"
       android:layout_width="fill_parent"
       android:layout_height="@dimen/setting_item_height"
       android:text="@string/cancel"
       android:textColor="@color/tv_blue_and_gray_selector"
       android:textSize="@dimen/setting_max"
       android:background="@drawable/btn_menu_one"
       android:layout_alignParentBottom="true"
       />
      <Button 
       android:id="@+id/btn_subscribe"
       android:layout_width="fill_parent"
       android:layout_height="@dimen/setting_item_height"
       android:layout_marginBottom="5dp"
       android:text="@string/str_add_subscribe"
       android:textColor="@color/tv_blue_and_gray_selector"
       android:textSize="@dimen/setting_max"
       android:background="@drawable/btn_menu_bottom"
       android:layout_above="@+id/btn_cancel"
       />
       <Button 
       android:id="@+id/btn_add_friend"
       android:layout_width="fill_parent"
       android:layout_height="@dimen/setting_item_height"
       android:layout_marginBottom="1dp"
       android:text="@string/str_add_friend"
       android:textColor="@color/tv_blue_and_gray_selector"
       android:textSize="@dimen/setting_max"
       android:background="@drawable/btn_menu_top"
       android:layout_above="@+id/btn_subscribe"
       />
       
    

</RelativeLayout>