<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    tools:context=".activity.HomeActivity" >

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/tou" >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:src="@drawable/btn_back" />

        <TextView
            android:id="@+id/textname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/signature"
            android:textColor="@color/black"
            android:textSize="@dimen/setting_title" />

          <TextView 
            android:id="@+id/tv_commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/single_complete"
            android:textColor="@color/tv_blue_and_gray_selector"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/text_margin_right"
            android:background="@color/transparent"
            android:textSize="@dimen/setting_title"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <EditText
        android:id="@+id/et_signature"
        android:textSize="@dimen/setting_max"
        android:textColorHint="@color/light_gray"
        android:textColor="@color/black"
        android:background="@drawable/shurukuang_qianming"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative"
        android:hint="@string/input_signature"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:layout_marginLeft="@dimen/setting_padding"
        android:layout_marginRight="@dimen/setting_padding"
        android:layout_marginTop="20dp" 
        android:gravity="top|left"/>


    <TextView
        android:id="@+id/tv_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/et_signature"
        android:layout_alignBottom="@+id/et_signature"
        android:paddingRight="10dp"
        android:text="@string/signature_num"
        android:textSize="@dimen/setting_middle" />

</RelativeLayout>